# Sanjeevani

./: README.md
sanjeevani_backend_layer/: .gitignore  README.md  firebase.json
sanjeevani_backend_layer/dashboard/: package.json
sanjeevani_backend_layer/docs/: deployment.md
sanjeevani_backend_layer/firestore/: firestore.indexes.json  firestore.rules
sanjeevani_backend_layer/functions/: package.json
sanjeevani_capture_layer/: .gitignore  README.md  pubspec.yaml
sanjeevani_capture_layer/lib/: main.dart
sanjeevani_capture_layer/test/: test_config.dart  test_models.dart  test_sanitizer.dart  test_security.dart  test_session_provider.dart
sanjeevani_intelligence_layer/: .gitignore  README.md  pyproject.toml  requirements.txt
sanjeevani_intelligence_layer/data/: knowledge_base.json
sanjeevani_intelligence_layer/sanjeevani/: __init__.py  config.py  engine.py  exceptions.py
sanjeevani_intelligence_layer/sanjeevani/core/: models.py  prompt_builder.py  risk_engine.py
sanjeevani_intelligence_layer/sanjeevani/inference/: base.py  huggingface.py  llamacpp.py
sanjeevani_intelligence_layer/sanjeevani/knowledge/: store.py
sanjeevani_intelligence_layer/sanjeevani/safety/: input_guard.py  output_guard.py
sanjeevani_intelligence_layer/sanjeevani/utils/: logging_setup.py
sanjeevani_intelligence_layer/tests/: test_config.py  test_exceptions.py  test_input_guard.py  test_integration.py  test_models.py  test_output_guard.py  test_prompt_builder.py  test_risk_engine.py  test_security.py
sanjeevani_records_layer/: .gitignore  README.md  pubspec.yaml
(+51 files in other folders)
